[oc_stormwater/#23] Develop initial look-and-feel Fix styles on mobile navbar

--- a/Source/Neptune.Web/Content/Bootstrap/neptune/ocstormwater.theme.css
+++ b/Source/Neptune.Web/Content/Bootstrap/neptune/ocstormwater.theme.css
@@ -194,6 +194,14 @@ ul.dropdown-menu li a:hover {
 ul.dropdown-menu .divider {
   background-color: #eee;
 }
+.navbar-toggle .glyphicon-menu-hamburger {
+  color: #fff;
+}
+@media (max-width: 767px) {
+  .navbar-nav .open .dropdown-menu {
+    background-color: #fff;
+  }
+}
 footer {
   position: relative;
   bottom: 0;
